.vscode/allianceuat_compare/force-app/main/default/objects/tc9_et__Timesheet_Entry__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <formula>tc9_et__Timesheet__r.Branch__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Branch</label>
    <type>Text</type>
</CustomField>