.vscode/allianceuat_compare/force-app/main/default/objects/tc9_et__Timesheet_Entry__c/fields/Cross_Assignment_Group_By_ID__c.field-meta.xml
<CustomField>
    <fullName>Cross_Assignment_Group_By_ID__c</fullName>
    <formula>tc9_et__Assignment__r.Cross_Assignment_Group_By_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cross Assignment Group By ID</label>
    <type>Text</type>
</CustomField>