.vscode/allianceuat_compare/force-app/main/default/objects/tc9_et__Timesheet_Entry__c/fields/Cross_Assignment_Timesheet_Entry__c.field-meta.xml
<CustomField>
    <fullName>Cross_Assignment_Timesheet_Entry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cross Assignment Timesheet Entry</label>
    <type>Checkbox</type>
</CustomField>