.vscode/allianceuat_compare/force-app/main/default/objects/tc9_et__Timesheet_Entry__c/fields/Interpretation_Period__c.field-meta.xml
<CustomField>
    <fullName>Interpretation_Period__c</fullName>
    <formula>TEXT(tc9_et__Assignment__r.Interpretation_Period__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interpretation Period</label>
    <type>Text</type>
</CustomField>