.vscode/allianceuat_compare/force-app/main/default/objects/tc9_et__Timesheet_Entry__c/fields/Overtime_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Overtime_Treatment__c</fullName>
    <inlineHelpText>Overtime treatment.  Set from the payee at creation of the TSE</inlineHelpText>
    <label>Overtime Treatment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OT Paid</fullName>
            </value>
            <value>
                <fullName>Time Off in Lieu</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>