.vscode/allianceuat_compare/force-app/main/default/objects/tc9_et__Timesheet_Entry__c/fields/X2_week_cycle__c.field-meta.xml
<CustomField>
    <fullName>X2_week_cycle__c</fullName>
    <formula>mceiling((tc9_et__Start_Date__c - (tc9_et__Timesheet__r.tc9_et__Assignment__r.First_2_week_period_start_date__c-1))/14)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>2 week cycle number, based on the assignment 4 week start date</inlineHelpText>
    <label>2 week cycle</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>