.vscode/allianceuat_compare/force-app/main/default/objects/tc9_et__Timesheet_Entry__c/fields/X2_week_period_updated__c.field-meta.xml
<CustomField>
    <fullName>X2_week_period_updated__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates TSE has been updated by custom process setting the 2 week period.</inlineHelpText>
    <label>2 week period updated</label>
    <type>Checkbox</type>
</CustomField>