.vscode/allianceuat_compare/force-app/main/default/objects/tc9_et__Timesheet_Entry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>tc9_et__Timesheet__c</columns>
    <columns>tc9_et__Employee__c</columns>
    <columns>tc9_et__Start_Date__c</columns>
    <columns>tc9_et__End_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>tc9_et__Employee__c</field>
        <operation>contains</operation>
        <value>Niamh Gorry</value>
    </filters>
    <label>All</label>
</ListView>